src/main/java/com/example/shoppingcart/error/UserNotAdminException.java
package com.example.shoppingcart.error;

public class UserNotAdminException extends RuntimeException{
}
